k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-eks
spec:
  selector:
    app: flask-eks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
